-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.6.1
-
None
-
-
3080304ce (dev), 3db393017 (6.10), b818d99b7 (6.9), 019f05501 (tqtc/lts-6.8), 898130c6b (tqtc/lts-6.5)
Some flakiness exist in tst_QGraphicsScene::tabFocus_sceneWithFocusWidgets() between widget.hide() and widget.show(). This is caused by a race condition occuring in qxcbwindow.cpp where the dispatcher might send show events, before the hide events have been processed properly. Resulting in failing the test.
We identified the issue has clearly coming from the event dispatcher.*
In the tst_QGraphicsScene::tabFocus_sceneWithFocusWidgets() we aimed at removing the antipattern QApplicationPrivate::setActivateWindow(). If the race condition is solved this should pass without issue.
Nb: We also found that by increasing the time to for example 1500 the test will pass without issue, so we could later confirm that the issue is related to the event dispatcher (where hide() and show() can get on top of each other and make the test fail)
For Gerrit Dashboard: QTBUG-123063 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
654452,3 | QXcbWindow: Eliminate data race between hide() and deferred activation | dev | qt/qtbase | Status: MERGED | +2 | 0 |
654607,2 | QXcbWindow: Eliminate data race between hide() and deferred activation | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
654636,2 | QXcbWindow: Eliminate data race between hide() and deferred activation | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
654669,2 | QXcbWindow: Eliminate data race between hide() and deferred activation | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
654812,2 | QXcbWindow: Eliminate data race between hide() and deferred activation | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |